--- a/src/pages/home/comps/detail/detail.scss
+++ b/src/pages/home/comps/detail/detail.scss
@@ -6,6 +6,7 @@
   height: 15vh;
   box-sizing: border-box;
   background-color: #ffffff;
+  margin: 20px 0;
   &__item {
     position: relative;
     display: flex;
