--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,3 +1,16 @@
+@import "~taro-ui/dist/style/components/modal.scss";
 .home-page {
   background-color: #E5E9F2;
+  &-bottom {
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    font-size: 23px;
+    color: #99A9BF;
+    letter-spacing: 2px;
+  }
+  .at-modal__content {
+    color: #99A9BF;
+  }
 }
