--- a/src/components/AirDetail/index.scss
+++ b/src/components/AirDetail/index.scss
@@ -12,7 +12,6 @@
     top: 35vh;
     left: 20vw;
     width: 60vw;
-    height: 60vh;
     transition: all .4s linear;
     opacity: 0;
     z-index: -1;
@@ -27,7 +26,7 @@
   &-top {
     position: relative;
     width: 100%;
-    height: 60%;
+    height: 35vh;
     &__del {
       position: absolute;
       right: 20px;
@@ -67,7 +66,7 @@
   }
   &-bottom {
     width: 100%;
-    height: 40%;
+    height: 20vh;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -75,11 +74,10 @@
     &__item {
       display: flex;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: center;
       align-items: center;
       border-right: 1px solid #dddddd;
       border-bottom: 1px solid #dddddd;
-
     }
     &__item:nth-of-type(1) {
        grid-area: 'a';
@@ -108,9 +106,18 @@
     &__item:nth-of-type(9) {
        grid-area: 'i';
     }
+    &__title {
+        margin-bottom: 5px;
+        font-size: 28px;
+        color: #505050;
+    }
+    &__txt {
+      font-size: 25px;
+      color: #99A9BF;
+    }
   }
   .is-visible {
-    top: 25vh;
+    top: 23vh;
     opacity: 1;
     background-color: white;
     z-index: 10;
