--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -13,4 +13,13 @@
   .at-modal__content {
     color: #99A9BF;
   }
+  .canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0;
+    width: 750px;
+    height: 800px;
+  }
 }
