--- a/src/components/tag/Tag.scss
+++ b/src/components/tag/Tag.scss
@@ -1,6 +1,7 @@
 .comps-tag {
   display: inline-block;
-  padding: 10px 30px;
+  width: 28vw;
+  padding: 15px 0;
   border-radius: 10px;
   text-align: center;
   vertical-align: middle;
