taro小程序重构
云开发+文件调整基本完成

--- a/client/src/components/AirDetail/index.scss
+++ b/client/src/components/AirDetail/index.scss
@@ -62,6 +62,7 @@
       padding: 10px 20px;
       background-color: #eed778;
       border-radius: 10px;
+      font-size: 25px;
     }
   }
   &-bottom {
