--- a/client/src/pages/home/comps/mainPage/mainPage.scss
+++ b/client/src/pages/home/comps/mainPage/mainPage.scss
@@ -30,6 +30,9 @@
     background-size: cover;
     background-position: center;
   }
+  &__loctext {
+    font-size: 32px;
+  }
   &__seticon {
     position: absolute;
     right: 10px;
