--- a/client/src/components/searchbar/SearchBar.scss
+++ b/client/src/components/searchbar/SearchBar.scss
@@ -16,7 +16,7 @@
       height: 50px;
       flex: 1;
       border-radius: 20px;
-      background-color: #dddddd;
+      background-color: #f3f3f3;
       &::placeholder {
         color: #b3b0b0;
       }
