--- a/client/src/pages/search/index.scss
+++ b/client/src/pages/search/index.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   margin-top: 20px;
   &__item {
+    position: relative;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -12,6 +13,13 @@
       width: 100%;
       padding: 5px 0px 5px 20px;
       font-size: 24px;
+      &__icon {
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        right: 4vw;
+        top: 8px;
+      }
       &__list {
         width: 100%;
         max-height: 300px;
@@ -34,5 +42,14 @@
     padding-left: 20rpx;
     border-top: 1px solid #f7f7f7;
     border-bottom: 1px solid #f7f7f7;
+  }
+  &__txt {
+    color: #666;
+    &--bold {
+      color: #b9cced;
+    }
+  }
+  &__tip {
+    text-align: center;
   }
 }
